Replace URL and Locale deprecated methods
- Fix i18n managers tabs